fixed issue #723 : Navbar footer text not visible
fixed the issue #723 : Navbar footer text not visible  
The footer text "© Copyright 2009-2020 Creative Commons By License, FOSSASIA" is not fully
visible even on fullscreen only "© Copyright 2009-2020 Creative" text is visible
now the text is visible on any size devices. 
fixed it by adding below css :
.copy-text-bottom{
  margin-bottom:48px;
}

--- a/css/custom.css
+++ b/css/custom.css
@@ -210,3 +210,6 @@ nav{
   display: flex;
   flex-wrap: wrap;
 }
+.copy-text-bottom{
+  margin-bottom:48px;
+}
